--- a/Timer_test/Timer_test.ioc
+++ b/Timer_test/Timer_test.ioc
@@ -15,15 +15,16 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
+Mcu.Pin10=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PA0-WKUP
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA8
-Mcu.Pin6=PA13
-Mcu.Pin7=PA14
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.Pin9=VP_TIM3_VS_ClockSourceINT
-Mcu.PinsNb=10
+Mcu.Pin6=PA9
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -39,15 +40,10 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA0-WKUP.GPIO_Label=Encoder_A
-PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
-PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA1.GPIO_Label=Encoder_B
-PA1.GPIO_PuPd=GPIO_PULLUP
 PA1.Signal=S_TIM2_CH2
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
@@ -58,6 +54,12 @@ PA2.Signal=USART2_TX
 PA8.GPIOParameters=GPIO_Speed
 PA8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA8.Signal=S_TIM1_CH1
+PA9.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PA9.GPIO_Label=Direcion_Pin
+PA9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA9.Locked=true
+PA9.PinState=GPIO_PIN_SET
+PA9.Signal=GPIO_Output
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -122,9 +124,10 @@ TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.IPParameters=Channel-PWM Generation1 CH1,Period,OCPolarity_1
 TIM1.OCPolarity_1=TIM_OCPOLARITY_LOW
 TIM1.Period=900-1
-TIM3.IPParameters=Prescaler,Period
-TIM3.Period=1000-1
-TIM3.Prescaler=72-1
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM3.IPParameters=Prescaler,Period,AutoReloadPreload
+TIM3.Period=100-1
+TIM3.Prescaler=7200-1
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
